--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ pillow==10.4.0
 numpy==1.26.4
 google-generativeai==0.7.2
 python-multipart==0.0.9
-onnxruntime==1.18.1   # <- important for ONNX on CPU
+onnxruntime==1.18.1
